# prototype-rs

./: Cargo.toml  readme.md
crates/estree-detect-requires/: Cargo.toml
crates/estree-detect-requires/src/: lib.rs  walk.rs
crates/node-core-shims/: Cargo.toml  build.rs  package.json
crates/node-core-shims/src/: lib.rs
src/: builtins.rs  deps.rs  detect.rs  graph.rs  loader.rs  main.rs  pack.rs  runtime.js
