[package]
name = "js-bundler"
version = "0.1.0"
authors = ["Renée Kooi <renee@kooi.me>"]

[workspace]

[dependencies]
digest = "0.7.2"
easter = { version = "0.0.5", path = "../esprit/crates/easter" }
esprit = { version = "0.0.5", path = "../esprit" }
estree-detect-requires = { path = "crates/estree-detect-requires" }
node-core-shims = { path = "crates/node-core-shims" }
node-resolve = "2.0.0"
serde_json = "1.0"
sha-1 = "0.7.0"
time = "0.1"
quicli = "0.2"
